Fix header height on mobile

--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -57,7 +57,7 @@ aside {
 
     &:not(.open) {
       // display: block;
-      height: 64px;
+      height: 48px;
       overflow: hidden;
     }
   }
